sort.basic.bubble.AlgBubbleSort1.scala.code
def testSort() {
  n=getNombreValeurs()
  for(i<-1 to n-1) {
  	if(plusPetit(i-1, i)==false){
    	return false
  }}
  return true
 




def bubbleSort()  {
  n=getNombreValeurs() 
  while(testSort()==true){
  	for(i<-1 to n-1) {
    	if (plusPetit(i-1, i)==false ){
      	echange(i-1, i)} 
   }
  }
}